--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Equipage Scantrad</title>		
 		<!-- Meta Description -->
-        <meta name="description" content="Site officiel de l'Equipage Scantrad !">
+        <meta name="description" content="Scantrad website">
         <meta name="keywords" content="one page, single page, onepage, responsive, parallax, creative, business, html5, css3, css3 animation">
         <meta name="author" content="Muhammad Morshed">
 		
